--- a/src/service.pug
+++ b/src/service.pug
@@ -12,42 +12,175 @@ html(lang="ru")
     body
         include chunks/header.pug
         main
+            section.bg-gradient.title
+                .container
+                    .row.justify-content-between
+                        .col-6
+                            h1.heading Услуги компании
+                        .col-5 
+                            p.subheading.subheading_light Разработка и внедрение IT-решений
+                            .subheading-line.subheading-line_light
+                            p Компания “ИНКАМ” - мультивендорный системный интегратор, оказывающий полный спектр ИТ-услуг и предлагающий высококачественные решения, ориентированные на удовлетворение потребностей крупных, средних и небольших компаний различных сфер деятельности.
             section.content
                 .container
-                    .row
-                        .col-9.col-md-12
-                            h1 Odit aut rerum hic tenetur a sapiente delectus, ut
-                            p Lorem ipsum dolor sit amet. Praesentium voluptatum deleniti atque corrupti. Ipsam voluptatem, quia non provident, similique sunt. Doloribus asperiores repellat. cumque nihil impedit, quo minus id, quod maxime. Aspernatur aut rerum necessitatibus saepe. Sit voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem eum fugiat. Hic tenetur a sapiente delectus, ut aliquid ex ea voluptate. Sint, obcaecati cupiditate non provident, similique sunt in ea voluptate velit esse.
-                            h2 Заголовок h2
-                            h3 Заголовок h3
-                            h4 Заголовок h4
-                            h5 Заголовок h5
-                            h6 Заголовок h6
-                            p Odit aut rerum hic tenetur a sapiente delectus, ut. Perferendis doloribus asperiores repellat. nam libero tempore, cum soluta nobis. Quidem rerum hic tenetur. Facilis est eligendi optio, cumque nihil impedit, quo minus. Voluptate velit esse, quam nihil. Iusto odio dignissimos ducimus, qui in culpa. Ex ea voluptate velit esse, quam nihil molestiae consequatur, vel illum. Sit, amet, consectetur, adipisci velit.
-                            blockquote Lorem ipsum dolor sit amet. Praesentium voluptatum deleniti atque corrupti. 
-                            p Odit aut rerum hic tenetur a sapiente delectus, ut. Perferendis doloribus asperiores repellat. nam libero tempore, cum soluta nobis. Quidem rerum hic tenetur. Facilis est eligendi optio, cumque nihil impedit, quo minus. Voluptate velit esse, quam nihil. Iusto odio dignissimos ducimus, qui in culpa. Ex ea voluptate velit esse, quam nihil molestiae consequatur, vel illum. Sit, amet, consectetur, adipisci velit.
-                            ul
-                                li list-item-1
-                                li list-item-2
-                                li list-item-3
-                                li list-item-4
-                                li list-item-5
-                            p Lorem ipsum dolor sit amet. Praesentium voluptatum deleniti atque corrupti. Ipsam voluptatem, quia non provident, similique sunt. Doloribus asperiores repellat. cumque nihil impedit, quo minus id, quod maxime. Aspernatur aut rerum necessitatibus saepe. Sit voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem eum fugiat. Hic tenetur a sapiente delectus, ut aliquid ex ea voluptate. Sint, obcaecati cupiditate non provident, similique sunt in ea voluptate velit esse.
-                            table
-                                thead
-                                    tr
-                                        th название столбца 1
-                                        th название столбца 2
-                                        th название столбца 3
-                                tbody
-                                    tr
-                                        td ячейка 1
-                                        td ячейка 2
-                                        td ячейка 3
-                                    tr
-                                        td ячейка 1
-                                        td ячейка 2
-                                        td ячейка 3
+                    .row.no-gutters
+                        .col-4
+                            .task.task_tab
+                                .task__title Предпроектное обследование
+                                .task__tab-content 
+                                    p Заказав услугу по экспертной оценке актуального состояния ИТ-инфраструктуры и ИТ-сервисов на предприятии в компании Открытые Технологии, Вы получите план по повышению эффективности и снижению затрат на эксплуатацию систем.
+                                    p Результатом станет:
+                                    ul
+                                        li более результативное использование имеющихся ИТ-ресурсов;
+                                        li минимизация рисков, связанных с использованием ИТ;
+                                        li понимание слабых мест и участков сети или системы, способных привести к нестабильной работе;
+                                        li получение картины затрат на реализацию проекта, что полезно на стадии принятия решения о запуске;
+                                        li выдача профессиональных рекомендаций по используемому оборудованию и его настройкам.
+                            .task.task_tab
+                                .task__title Управление комплексными проектами
+                                .task__tab-content 
+                                    p Заказав услугу по экспертной оценке актуального состояния ИТ-инфраструктуры и ИТ-сервисов на предприятии в компании Открытые Технологии, Вы получите план по повышению эффективности и снижению затрат на эксплуатацию систем.
+                                    p Результатом станет:
+                                    ul
+                                        li более результативное использование имеющихся ИТ-ресурсов;
+                                        li минимизация рисков, связанных с использованием ИТ;
+                                        li понимание слабых мест и участков сети или системы, способных привести к нестабильной работе;
+                                        li получение картины затрат на реализацию проекта, что полезно на стадии принятия решения о запуске;
+                            .task.task_tab
+                                .task__title Монтажные и пусконаладочные работы
+                                .task__tab-content 
+                                    p Заказав услугу по экспертной оценке актуального состояния ИТ-инфраструктуры и ИТ-сервисов на предприятии в компании Открытые Технологии, Вы получите план по повышению эффективности и снижению затрат на эксплуатацию систем.
+                                    p Результатом станет:
+                                    ul
+                                        li более результативное использование имеющихся ИТ-ресурсов;
+                                        li минимизация рисков, связанных с использованием ИТ;
+                                        li понимание слабых мест и участков сети или системы, способных привести к нестабильной работе;
+                                        li получение картины затрат на реализацию проекта, что полезно на стадии принятия решения о запуске;
+                        .col-4
+                            .task.task_tab
+                                .task__title Проектирование
+                                .task__tab-content 
+                                    p Заказав услугу по экспертной оценке актуального состояния ИТ-инфраструктуры и ИТ-сервисов на предприятии в компании Открытые Технологии, Вы получите план по повышению эффективности и снижению затрат на эксплуатацию систем.
+                                    p Результатом станет:
+                                    ul
+                                        li более результативное использование имеющихся ИТ-ресурсов;
+                                        li минимизация рисков, связанных с использованием ИТ;
+                                        li понимание слабых мест и участков сети или системы, способных привести к нестабильной работе;
+                                        li получение картины затрат на реализацию проекта, что полезно на стадии принятия решения о запуске;
+                            .task.task_tab
+                                .task__title Поставка оборудования
+                                .task__tab-content 
+                                    p Заказав услугу по экспертной оценке актуального состояния ИТ-инфраструктуры и ИТ-сервисов на предприятии в компании Открытые Технологии, Вы получите план по повышению эффективности и снижению затрат на эксплуатацию систем.
+                                    p Результатом станет:
+                                    ul
+                                        li более результативное использование имеющихся ИТ-ресурсов;
+                                        li минимизация рисков, связанных с использованием ИТ;
+                                        li понимание слабых мест и участков сети или системы, способных привести к нестабильной работе;
+                                        li получение картины затрат на реализацию проекта, что полезно на стадии принятия решения о запуске;
+                            .task.task_tab
+                                .task__title Техническая поддержка
+                                .task__tab-content 
+                                    p Заказав услугу по экспертной оценке актуального состояния ИТ-инфраструктуры и ИТ-сервисов на предприятии в компании Открытые Технологии, Вы получите план по повышению эффективности и снижению затрат на эксплуатацию систем.
+                                    p Результатом станет:
+                                    ul
+                                        li более результативное использование имеющихся ИТ-ресурсов;
+                                        li минимизация рисков, связанных с использованием ИТ;
+                                        li понимание слабых мест и участков сети или системы, способных привести к нестабильной работе;
+                                        li получение картины затрат на реализацию проекта, что полезно на стадии принятия решения о запуске;
+                        .col-4
+                            .task.task_tab
+                                .task__title Строительство сети
+                                .task__tab-content 
+                                    p Заказав услугу по экспертной оценке актуального состояния ИТ-инфраструктуры и ИТ-сервисов на предприятии в компании Открытые Технологии, Вы получите план по повышению эффективности и снижению затрат на эксплуатацию систем.
+                                    p Результатом станет:
+                                    ul
+                                        li более результативное использование имеющихся ИТ-ресурсов;
+                                        li минимизация рисков, связанных с использованием ИТ;
+                                        li понимание слабых мест и участков сети или системы, способных привести к нестабильной работе;
+                                        li получение картины затрат на реализацию проекта, что полезно на стадии принятия решения о запуске;
+                            .task.task_tab
+                                .task__title Технический аудит
+                                .task__tab-content 
+                                    p Заказав услугу по экспертной оценке актуального состояния ИТ-инфраструктуры и ИТ-сервисов на предприятии в компании Открытые Технологии, Вы получите план по повышению эффективности и снижению затрат на эксплуатацию систем.
+                                    p Результатом станет:
+                                    ul
+                                        li более результативное использование имеющихся ИТ-ресурсов;
+                                        li минимизация рисков, связанных с использованием ИТ;
+                                        li понимание слабых мест и участков сети или системы, способных привести к нестабильной работе;
+                                        li получение картины затрат на реализацию проекта, что полезно на стадии принятия решения о запуске;
+            section.content.content_offset.bg-light
+                .container
+                    p.h4.mb-40 Внедрение IТ-решений «под ключ» позволит вам:
+                    .row.advantage.advantage_with-icon
+                        .col-4.d-flex.mb-20
+                            .advantage__item эффективно использовать IT-ресурсы
+                                img.advantage__icon.position-1(src="../img/clipboard-check.svg")
+                        .col-4.d-flex.mb-20
+                            .advantage__item минимизировать риски с&nbsp;технической стороны
+                                img.advantage__icon.position-2(src="../img/lightbulb.svg")
+                        .col-4.d-flex.mb-20
+                            .advantage__item снизить затраты на&nbsp;реализацию проекта
+                                img.advantage__icon.position-3(src="../img/credit-card.svg")
+                        .col-4.d-flex
+                            .advantage__item грамотно планировать расширение структуры
+                                img.advantage__icon.position-4(src="../img/map.svg")
+                        .col-4.d-flex
+                            .advantage__item получить оборудование в&nbsp;короткие сроки
+                                img.advantage__icon.position-5(src="../img/clock.svg")
+                        .col-4.d-flex
+                            .advantage__item рассчитывать на&nbsp;техподдержку 24/7
+                                img.advantage__icon.position-6(src="../img/diamond.svg")
+            section.content.content_offset
+                .container
+                    .row.justify-content-between
+                        .col-8
+                            p.h1.mb-40 IT-решения
+                            .row.no-gutters
+                                .col-6.d-flex
+                                    .service.service_content-hover
+                                        .service__title Сетевая инфраструктура
+                                        .service__content
+                                            p.mb-0.text-small Передача данных <br>
+                                                | Транспортные и опорные сети <br>
+                                                | Фиксированный доступ и радиодоступ <br>
+                                                | Система управления сетью
+                                .col-6.d-flex
+                                    .service.service_content-hover.service_bl-hide
+                                        .service__title Информационная безопасность
+                                        .service__content
+                                            p.text-small Передача данных <br>
+                                                | Транспортные и опорные сети <br>
+                                            p.text-small.mb-0 Передача данных <br>
+                                                | Транспортные и опорные сети <br>
+                                .col-6.d-flex
+                                    .service.service_content-hover.service_bt-hide
+                                        .service__title Связь и коллективная работа
+                                        .service__content
+                                            p.text-small.mb-0 Передача данных <br>
+                                                    | Транспортные и опорные сети
+                                .col-6.d-flex
+                                    .service.service_content-hover.service_bt-hide.service_bl-hide
+                                        .service__title ЦОД
+                                        .service__content
+                                            p.text-small.mb-0 Передача данных <br>
+                                                    | Транспортные и опорные сети <br>
+                                                    | Транспортные и опорные сети
+                        .col-3
+                            p.subheading Нас рекомендуют
+                            .subheading-line.subheading-line_sidebar
+                            .slider.slider_review
+                                .slider__item
+                                    a(href="../img/demo-review.jpg" data-fancybox data-caption="Caption for single image")
+                                       img.img-fluid.img-border(src="../img/demo-review.jpg")
+                                    p.text-small.mt-20.mb-0 Текст из письма текст из письма Текст из письма текст из письма Текст из письма текст из письма
+                                .slider__item
+                                    a(href="../img/demo-review.jpg" data-fancybox data-caption="Caption for single image")
+                                        img.img-fluid.img-border(src="../img/demo-review.jpg")
+                                    p.text-small.mt-20.mb-0 Текст из письма текст из письма Текст из письма текст из письма Текст из письма текст из письма
+                                .slider__item
+                                    a(href="../img/demo-review.jpg" data-fancybox data-caption="Caption for single image")
+                                       img.img-fluid.img-border(src="../img/demo-review.jpg")
+                                    p.text-small.mt-20.mb-0 Текст из письма текст из письма Текст из письма текст из письма Текст из письма текст из письма Текст из письма текст из письма Текст из письма текст из письма Текст из письма текст из письма Текст из письма текст из письма Текст из письма текст из письма Текст из письма текст из письма Текст из письма текст из письма
         include chunks/footer.pug
         script(src="./js/jquery.min.js")
         script(src="./js/jquery.inputmask.js")
