--- a/src/css/item/_task.scss
+++ b/src/css/item/_task.scss
@@ -1,6 +1,7 @@
 .task{
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 
     width: 100%;
     padding: 30px 20px;
@@ -24,6 +25,32 @@
             height: 20px;
 
             background: url("../img/plus-gradient.svg") no-repeat center / contain;
+        }
+    }
+    .task__tab-content{
+        display: none;
+
+        font-size: 12px;
+        color: $dark-blue;
+
+        padding-top: 20px;
+
+        p, ul, ol{
+            font-size: 12px;
+        }
+    }
+
+    &_tab{
+        cursor: pointer;
+        transition: .3s;
+        .task__title{
+            transition: .3s;
+        }
+        &:hover{
+            color: $blue;
+            .task__title{
+                color: $blue;
+            }
         }
     }
 }
