--- a/src/product.pug
+++ b/src/product.pug
@@ -3,7 +3,7 @@ html(lang="ru")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title Index Page
+        title Product Page
         link(href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet")
         link(href='./css/slick.css', rel='stylesheet')
         link(href='./css/slick-theme.css', rel='stylesheet')
@@ -14,41 +14,124 @@ html(lang="ru")
         main
             section.content
                 .container
+                    .slider.slider_catalog
+                        .slider__item
+                            .content__label.mb-20 Уникальное предложение
+                            .content__title Скидка до&nbsp;80% на&nbsp;покупку 2&nbsp;СДХ от&nbsp;HUAWEI
+                            .content__offer.mt-20 + лицезии HyperMetro бесплатно!
+                        .slider__item
+                            .content__label.mb-20 Уникальное предложение
+                            .content__title Скидка до&nbsp;80% на&nbsp;покупку 2&nbsp;СДХ от&nbsp;HUAWEI
+                            .content__offer.mt-20 + лицезии HyperMetro бесплатно!
+            section.content
+                .container
+                    p.heading.heading_small Ключевые Вендоры компании Инкам
+                    .d-flex.justify-content-between.align-items-center
+                        .vendor-logo
+                            img.img-fluid(src="../img/logo/1.jpg")
+                        .vendor-logo
+                            img.img-fluid(src="../img/logo/2.jpg")
+                        .vendor-logo
+                            img.img-fluid(src="../img/logo/3.jpg")
+                        .vendor-logo
+                            img.img-fluid(src="../img/logo/4.jpg")
+                        .vendor-logo
+                            img.img-fluid(src="../img/logo/5.jpg")
+                        .vendor-logo
+                            img.img-fluid(src="../img/logo/6.jpg")
+                        .vendor-logo
+                            img.img-fluid(src="../img/logo/7.jpg")
+                        .vendor-logo
+                            img.img-fluid(src="../img/logo/8.jpg")
+                        .vendor-logo
+                            img.img-fluid(src="../img/logo/9.jpg")
+                        .vendor-logo
+                            img.img-fluid(src="../img/logo/10.jpg")
+            section.block-content
+                .container
                     .row
-                        .col-9.col-md-12
-                            h1 Odit aut rerum hic tenetur a sapiente delectus, ut
-                            p Lorem ipsum dolor sit amet. Praesentium voluptatum deleniti atque corrupti. Ipsam voluptatem, quia non provident, similique sunt. Doloribus asperiores repellat. cumque nihil impedit, quo minus id, quod maxime. Aspernatur aut rerum necessitatibus saepe. Sit voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem eum fugiat. Hic tenetur a sapiente delectus, ut aliquid ex ea voluptate. Sint, obcaecati cupiditate non provident, similique sunt in ea voluptate velit esse.
-                            h2 Заголовок h2
-                            h3 Заголовок h3
-                            h4 Заголовок h4
-                            h5 Заголовок h5
-                            h6 Заголовок h6
-                            p Odit aut rerum hic tenetur a sapiente delectus, ut. Perferendis doloribus asperiores repellat. nam libero tempore, cum soluta nobis. Quidem rerum hic tenetur. Facilis est eligendi optio, cumque nihil impedit, quo minus. Voluptate velit esse, quam nihil. Iusto odio dignissimos ducimus, qui in culpa. Ex ea voluptate velit esse, quam nihil molestiae consequatur, vel illum. Sit, amet, consectetur, adipisci velit.
-                            blockquote Lorem ipsum dolor sit amet. Praesentium voluptatum deleniti atque corrupti. 
-                            p Odit aut rerum hic tenetur a sapiente delectus, ut. Perferendis doloribus asperiores repellat. nam libero tempore, cum soluta nobis. Quidem rerum hic tenetur. Facilis est eligendi optio, cumque nihil impedit, quo minus. Voluptate velit esse, quam nihil. Iusto odio dignissimos ducimus, qui in culpa. Ex ea voluptate velit esse, quam nihil molestiae consequatur, vel illum. Sit, amet, consectetur, adipisci velit.
-                            ul
-                                li list-item-1
-                                li list-item-2
-                                li list-item-3
-                                li list-item-4
-                                li list-item-5
-                            p Lorem ipsum dolor sit amet. Praesentium voluptatum deleniti atque corrupti. Ipsam voluptatem, quia non provident, similique sunt. Doloribus asperiores repellat. cumque nihil impedit, quo minus id, quod maxime. Aspernatur aut rerum necessitatibus saepe. Sit voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem eum fugiat. Hic tenetur a sapiente delectus, ut aliquid ex ea voluptate. Sint, obcaecati cupiditate non provident, similique sunt in ea voluptate velit esse.
-                            table
-                                thead
-                                    tr
-                                        th название столбца 1
-                                        th название столбца 2
-                                        th название столбца 3
-                                tbody
-                                    tr
-                                        td ячейка 1
-                                        td ячейка 2
-                                        td ячейка 3
-                                    tr
-                                        td ячейка 1
-                                        td ячейка 2
-                                        td ячейка 3
+                        .col-5
+                            p.mb-0.h3 Комплексная поставка компьютерного оборудования для бизнеса
+                        .col-6 
+                            p.mb-0.text-dark-blue Мы предлагаем исчерпывающий ассортимент IT-решений для бизнеса, 
+                                | что позволяет подобрать оптимальное техническое оснащение, которое поможет достигать 
+                                | поставленных целей. Наши инженеры разрабатывают и интегрируют в бизнес-процессы 
+                                | индивидуальные технические решения, которые оптимизируют рабочие процессы, а также 
+                                | способствуют росту производительности.
+            section.vendor
+                .container
+                    .row
+                        .col-4
+                            .service.vendor__item
+                                a.vendor__modal(data-fancybox="test1" data-src="#test" href="javascript:;") ?
+                                .row.align-items-center
+                                    .col-4
+                                        img.img-fluid(src="../img/logo/1.jpg")
+                                    .col-8
+                                        p.vendor__title Вендор 1
+                                        a.vendor__link(href="#") + сертификат партнерства
+                        .col-4
+                            .service.vendor__item
+                                a.vendor__modal(data-fancybox="test2" data-src="#test" href="javascript:;") ?
+                                .row.align-items-center
+                                    .col-4
+                                        img.img-fluid(src="../img/logo/2.jpg")
+                                    .col-8
+                                        p.vendor__title Вендор 2
+                                        a.vendor__link(href="#") + сертификат партнерства
+                        .col-4
+                            .service.vendor__item
+                                a.vendor__modal(data-fancybox="test3" data-src="#test" href="javascript:;") ?
+                                .row.align-items-center
+                                    .col-4
+                                        img.img-fluid(src="../img/logo/3.jpg")
+                                    .col-8
+                                        p.vendor__title Вендор 3
+                                        a.vendor__link(href="#") + сертификат партнерства
+            section.catalog
+                .container
+                    .catalog__line.mb-40
+                    form.form.form_filter
+                        select#vendor.select(name="")
+                            option(value="1") Вендор 1
+                            option(value="2") Вендор 2
+                            option(value="3") Вендор 3
+                        select#sphere.select(name="")
+                            option(value="1") Сфера 1
+                            option(value="2") Сфера 2
+                            option(value="3") Сфера 3            
+                    .row
+                        .col-3
+                            .solution
+                                .solution__image
+                                    img.solution__vendor-logo(src="../img/logo/4.jpg")
+                                .solution__info
+                                    span.text-bold Вендор 1
+                                    span  / 
+                                    span Сфера 1
+                                a.solution__title(href="/") Решение 1
+                        .col-3
+                            .solution
+                                .solution__image
+                                    img.solution__vendor-logo(src="../img/logo/5.jpg")
+                                .solution__info
+                                    span.text-bold Вендор 1
+                                    span  / Сфера 1
+                                a.solution__title(href="/") Решение 2
+                        .col-3
+                            .solution
+                                .solution__image
+                                    img.solution__vendor-logo(src="../img/logo/6.jpg")
+                                .solution__info
+                                    span.text-bold Вендор 1
+                                    span  / Сфера 1
+                                a.solution__title(href="/") Решение 2
         include chunks/footer.pug
+        .modal#test(style="display: none;")
+            .modal__title Заголовок модального окна
+            .modal__content 
+                p Lorem ipsum dolor sit amet. Praesentium voluptatum deleniti atque corrupti. Ipsam voluptatem, quia non provident, similique sunt. Doloribus asperiores repellat. cumque nihil impedit, quo minus id, quod maxime. Aspernatur aut rerum necessitatibus saepe. Sit voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem eum fugiat. Hic tenetur a sapiente delectus, ut aliquid ex ea voluptate. Sint, obcaecati cupiditate non provident, similique sunt in ea voluptate velit esse.
+                p Lorem ipsum dolor sit amet. Praesentium voluptatum deleniti atque corrupti. Ipsam voluptatem, quia non provident, similique sunt. Doloribus asperiores repellat. cumque nihil impedit, quo minus id, quod maxime. Aspernatur aut rerum necessitatibus saepe. Sit voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem eum fugiat. Hic tenetur a sapiente delectus, ut aliquid ex ea voluptate. Sint, obcaecati cupiditate non provident, similique sunt in ea voluptate velit esse.
         script(src="./js/jquery.min.js")
         script(src="./js/jquery.inputmask.js")
         script(src="./js/slick.min.js")
